[UPDATE] add tag support

--- a/models/articles.ini
+++ b/models/articles.ini
@@ -5,6 +5,7 @@ label = Articles
 [children]
 model = post
 order_by = -pub_date, title
+slug_format = {{ this.pub_date|dateformat('Y-MM/') ~ this._id }}
 
 [pagination]
 enabled = yes
