--- a/models/post.ini
+++ b/models/post.ini
@@ -6,6 +6,10 @@ label = {{ this.title }}
 label = Title
 type = string
 
+[fields.tags]
+label = Tags
+type = strings
+
 [fields.author]
 label = Author
 type = string
