[MISC] adjust tags setting

--- a/configs/tags.ini
+++ b/configs/tags.ini
@@ -1,3 +1,4 @@
 parent = /articles
 template = category.html
 url_path = {{ this.parent.url_path }}tag/{{ tag|slug(lowercase=False, replacements=[['#', 'sharp'], ['+', 'p']]) }}
+ignore_missing = true
