--- a/.github/workflows/deploy-ghpage.yml
+++ b/.github/workflows/deploy-ghpage.yml
@@ -2,14 +2,13 @@ name: deploy-ghpage
 run-name: building lektor pages
 on: [push]
 jobs:
-  check-bats-version:
+  deploy-lektor-ghpage:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-          cache: 'pip'
       - run: pip install "Flask<2"
       - run: pip install Lektor
       - run: lektor build
