--- a/.github/workflows/deploy-ghpage.yml
+++ b/.github/workflows/deploy-ghpage.yml
@@ -4,6 +4,7 @@ on: [push]
 jobs:
   deploy-lektor-ghpage:
     runs-on: ubuntu-latest
+    environment: github-pages
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
