[UPDATE] extend portfolio data structure

--- a/flowblocks/project.ini
+++ b/flowblocks/project.ini
@@ -14,9 +14,17 @@ type = string
 label = Project URL
 type = url
 
+[fields.summary]
+label = Summary
+type = text
+
 [fields.body]
 label = Body
 type = text
+
+[fields.tags]
+label = Tags
+type = strings
 
 [fields.class]
 label = Class
